--- a/React/my-app/src/App.css
+++ b/React/my-app/src/App.css
@@ -1,38 +1,69 @@
-.App {
+:root {
+  background-color: dimgrey;
+}
+
+.content {
+  word-wrap: break-word;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 60% 40%;
+}
+
+h1 {
   text-align: center;
+  color: gold;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.column1 {
+  grid-column: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.column2 {
+  grid-column: 2;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+img {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-left: auto;
+  margin-top: 0;
+  padding-right: 10px;
+  width: 95%;
+}
+
+.btn {
+  margin-top: auto;
+  width: auto;
+  height: fit-content;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.voteBtn {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.voteNum {
+  width: fit-content;
+  color: blueviolet;
+  background-color: yellowgreen;
+  font-size: 25px;
+  font-weight: 900;
+  padding: 6px;
+  padding-top: 7px;
+  border-radius: 7px;
+  border: solid 2px black;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.block {
+  margin: auto;
+  width: 60%;
+  padding: 15px;
+  background-color: antiquewhite;
+  border: solid 3px;
+  border-radius: 15px;
 }
